# erpnext_ukraine

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/helper/: site_config.json
.github/workflows/: accounting-ci.yml
docs/: price-tags.md  prro-conformance.md  receipt-printing-requirements.md  ua-accounting.md
docs/pos/: 05-api-contracts.md  10-stage0-spike-report.md  11-cashier-guide.md  README.md
erpnext_ua/: hooks.py  install.py  modules.txt  print_designer_price_tags.py  print_designer_setup.py
erpnext_ua/desktop_icon/: price_tags.json  ua_pos_workspace.json
erpnext_ua/public/js/: price_tag_source.js  purchase_vat.js
erpnext_ua/tests/: test_pos_integration_contracts.py  test_price_tag_contracts.py  test_receiving_contracts.py  test_ua_chart_setup.py  test_ua_chart_templates.py  test_ua_off_balance_entry.py  test_ua_off_balance_rules.py
erpnext_ua/translations/: uk.csv
erpnext_ua/ua_accounting/: __init__.py  chart_setup.py  off_balance.py  off_balance_rules.py
erpnext_ua/ua_accounting/chart_of_accounts/: __init__.py  templates.py  ua_full_291.json  ua_simplified_186.json
erpnext_ua/ua_fiscal/: offline_fiscal.py  orchestration.py  payment.py
erpnext_ua/ua_fiscal/doctype/prro_shift/: prro_shift.json  (+1 more)
erpnext_ua/ua_fiscal/doctype_js/: prro_receipt.js
erpnext_ua/ua_fiscal/tests/: test_prro_flow.py
erpnext_ua/ua_fop/: taxpayer_cabinet.py
erpnext_ua/ua_fop/tests/: test_taxpayer_cabinet.py
erpnext_ua/ua_pos/: api.py  barcode.py  print_service.py
erpnext_ua/ua_pos/tests/: test_fiscal_recovery.py  test_fiscal_report_data.py  test_print_service.py
erpnext_ua/ua_price_tags/: __init__.py  domain.py  service.py
erpnext_ua/ua_price_tags/tests/: test_price_tag_domain.py
erpnext_ua/ua_receiving/: domain.py  pricing.py  service.py
erpnext_ua/ua_receiving/tests/: test_receiving_domain.py  test_receiving_frappe.py
erpnext_ua/workspace_sidebar/: price_tags.json  ua_accounting.json  ua_fiscal.json  ua_fop.json  ua_pos.json  ua_pos_workspace.json
tools/: generate_ua_chart_data.py
(+55 files in other folders)
