[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erpnext_ua"
version = "0.3.0"
description = "ERPNext Ukraine localization: FOP profiles, tax parameters, print formats, translations"
requires-python = ">=3.14"
readme = "README.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["erpnext_ua*"]
exclude = ["public*", "docs*", "tests*"]

[tool.setuptools.package-data]
erpnext_ua = [
    "**/*.csv",
    "**/*.html",
    "**/*.js",
    "**/*.json",
    "**/*.po",
    "**/*.svg",
    "**/*.txt",
    "**/*.xsd",
]

[tool.black]
line-length = 120
