[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erpnext_ua"
version = "0.7.0"
description = "ERPNext Ukraine business layer: FOP, POS, PRRO, accounting, documents, price tags and translations"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "qrcode>=8.0,<9",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
erpnext_ua = [
    "locale/*.po",
    "translations/*.csv",
    "public/images/*.svg",
    "modules.txt",
    "ua_fiscal/schemas/*.xsd",
    "**/*.json",
    "**/*.js",
    "**/*.css",
    "**/*.html",
]

[tool.setuptools.packages.find]
include = ["erpnext_ua*"]
exclude = ["public*", "docs*", "tests*"]

[tool.black]
line-length = 120
